# xontrib-term-integrations

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release-drafter.yml  test.yml
xontrib/: iterm2.py  term_integration.py
xontrib_term_integrations/: __init__.py  iterm2.py  kitty.py  kitty_completions.py  semantic_prompt.py  utils.py  wezterm.py
