[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.pdm.build]
includes = ["xontrib", "xontrib_term_integrations"]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Noortheen Raja NJ", email = "jnoortheen@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "xonsh>=0.12.0",
]
name = "xontrib-term-integrations"
version = "0.1.3"
description = "Support shell integration of terminal programs iTerm2, Kitty..."
readme = "README.md"
keywords = ["xontrib", "xonsh"]
classifiers = ["Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Operating System :: OS Independent", "Topic :: System :: Shells", "Topic :: System :: System Shells", "Topic :: Terminals", "Programming Language :: Python", "Programming Language :: Python :: 3"]

[project.urls]
Documentation = "https://github.com/jnoortheen/xontrib-term-integrations/blob/master/README.md"
Code = "https://github.com/jnoortheen/xontrib-term-integrations"
"Issue tracker" = "https://github.com/jnoortheen/xontrib-term-integrations/issues"
repository = "https://github.com/jnoortheen/xontrib-term-integrations"
